fix: z-index of image preview

--- a/web/src/less/preview-image-dialog.less
+++ b/web/src/less/preview-image-dialog.less
@@ -1,6 +1,6 @@
 .preview-image-dialog {
   @apply p-0;
-  z-index: 101;
+  z-index: 1001;
   background-color: rgba(0, 0, 0, 0.6);
 
   > .dialog-container {
